--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,3 +21,11 @@
   booktitle={MLMI@MICCAI},
   year={2020}
 }
+
+@inproceedings{Shen2022efficient,
+  abbr={ISMRM},
+  title={Efficient 3D cone trajectory design for improved combined angiographic and perfusion imaging using arterial spin labelling},
+  author={Shen, Qijia and Chiew, Mark and Wu, Wenchuan and Okell, Thomas W},
+  year={2023},
+  booktitle={ISMRM Workshop on Data Sampling & Image Reconstruction}
+}
